# Alepha

./: .gitignore  Alepha.h  AutoRAII.h  Blob.h  Buffer.h  CMakeLists.txt  Capabilities.h  Concepts.h  Console.cc  Console.cpp  Console.h  ConstexprString.h  Constness.h  DataChain.h  DataStream.h  DefaultValue.h  Enum.h  Event.h  Exception.h  Exceptions.h  Field.h  Funcy.h  Gate.h  Invariant.h  Line.cpp  Line.h  Makefile  ProgramOptions.cc  ProgramOptions.cpp  ProgramOptions.h  RequiresLock.h  SemiBool.h  StaticValue.h  Streamable.h  Thread.h  TotalOrder.h  assertion.h  auto_comparable.h  boost_shim.h  comparisons.h  (+23 more)
AutoRAII.test/: 0.cc  Makefile
Exception.test/: CMakeLists.txt  Makefile  exception.cc
IOStreams/: CMakeLists.txt  IStreamable.h  OStreamable.h  Stream.h  StreamState.h  String.h  delimiters.h  streamable.h
Meta/: CMakeLists.txt  Makefile  dep_value.h  find.h  functional.h  is_deque.h  is_forward_list.h  is_functional.h  is_list.h  is_map.h  is_optional.h  is_pair.h  is_product_type.h  is_sequence.h  is_set.h  is_streamable.h  is_string.h  is_tuple.h  is_vector.h  overload.h  pair_decay.h  product_type_decay.h  sequence_kind.h  test.cc  tuple_decay.h  type_algorithm.h  type_traits.h  type_value.h
Mockination/: MockCondition.h  MockFunction.h  MockMutex.h
Proof/: Attestation.h  CMakeLists.txt  Makefile  simple.cc  test.cc
Reflection/: CMakeLists.txt  aggregate_initialization.h  aggregate_initializer_size.h  aggregate_members.h  tuplizeAggregate.h
Stud/: type_traits.h
Testing/: CMakeLists.txt  TableTest.h  colors.h  printDebugging.h  test.cc  test.h  test2.cc  testlib.cc
Thread.test/: Makefile  thread.cc
Truss/: README  basetypes.h  condition_variable.h  function.h  m2.h  memory.h  mutex.h  test.cc  thread.h  thread_common.h
Utility/: CMakeLists.txt  StackableStreambuf.cc  StackableStreambuf.h  StaticValue.h  TupleAdapter.h  evaluation.h  evaluation_helpers.h
cmake/: rules.cmake
(+34 files in other folders)
